--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,21 +1,52 @@
-html, body {
+html,
+body {
     font-family: -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+        "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
-.bio {
-    line-height: 1;
-    margin-bottom: 4rem;
-}
-
-.container {
+body {
     max-width: 760px;
-    margin: 0 auto;
-    padding: 0 32px;
+    margin: 1rem auto;
+    padding: 0 1rem;
+    font-weight: 400;
+    line-height: 1.7;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+a {
+    text-decoration: none;
 }
 
 img {
     width: 100%;
+}
+
+pre {
+    font-size: 1rem;
+}
+
+.post-list {
+    padding-left: 0;
+}
+
+.post-list li {
+    list-style: none;
+}
+
+.post-list li:not(:last-of-type) {
+    margin-bottom: 4px;
+}
+
+.post-list a {
+    text-decoration: none;
+    font-size: 21px;
+}
+
+.bio {
+    margin-bottom: 4rem;
 }
