--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -45,6 +45,13 @@ small,
     font-size: 0.8rem;
 }
 
+blockquote {
+    background: rgba(0, 0, 0, 0.08);
+    padding: 0.5rem 1rem;
+    border-left: 5px solid #0ea5e9;
+    margin-left: 2rem;
+}
+
 .Blog .post {
     margin-top: 2rem;
 }
