--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,8 +20,8 @@ p {
 }
 
 a {
-    color: #10b981  ;
-    text-decoration: none;
+    color: #1d4289  ;
+    text-decoration: underline;
 }
 
 img {
@@ -45,7 +45,6 @@ pre {
 }
 
 .post-list a {
-    text-decoration: none;
     font-size: 21px;
 }
 
